# gen-iter

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: gen_iter.rs  gen_iter_return.rs  lib.rs
tests/: generator_clone.rs  impl_generator.rs
